--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to 'New User', new_user_path %>
 
-<table class="sortable" data-current-page="">
+<table id="userstable" class="sortable" data-current-page="<%= @users.current_page %>" data-total-pages="<%= @users.total_pages %>" >
   <thead>
     <tr>
       <th>First name</th>
@@ -29,5 +29,3 @@
 </table>
 
 <br>
-
-<%= will_paginate @users %>
