--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,10 +16,10 @@
 
   <tbody>
     <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
+      <tr id="<%= user.id.to_s %>">
+        <td class="first_name"><%= user.first_name %></td>
+        <td class="last_name"><%= user.last_name %></td>
+        <td class="email"><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
